[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/level_two/report.gd" type="Script" id=1]
[ext_resource path="res://art/stage 2/report_2.png" type="Texture" id=2]
[ext_resource path="res://ui/build_ui.tres" type="Theme" id=3]

[node name="ReportSprite" type="Sprite"]
position = Vector2( 47, 63 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ReportLabel" type="Label" parent="."]
margin_left = -46.0
margin_top = -45.0
margin_right = 49.0
margin_bottom = -31.0
text = "oloosdf"
autowrap = true

[node name="ReportTween" type="Tween" parent="."]

[node name="CounterLabel" type="Label" parent="."]
margin_left = -52.0
margin_top = 32.0
margin_right = 52.0
margin_bottom = 62.0
grow_vertical = 0
rect_min_size = Vector2( 104, 0 )
theme = ExtResource( 3 )
text = "re"
autowrap = true
